# docs/swagger.json
@@ -891,7 +891,58 @@
                 }
             }
         },
-        "/v1/review/{id}": {
+        "/v1/reviews": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Creates a new review and stores it in the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reviews"
+                ],
+                "summary": "Create a new review",
+                "parameters": [
+                    {
+                        "description": "Review JSON",
+                        "name": "review",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/data.ReviewInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/data.ReviewInput"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/reviews/{id}": {
             "get": {
                 "security": [
                     {
@@ -946,14 +997,14 @@
                 }
             }
         },
-        "/v1/reviews": {
+        "/v1/reviews/{id}/vote": {
             "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Creates a new review and stores it in the database",
+                "description": "Casts a vote for a review",
                 "consumes": [
                     "application/json"
                 ],
@@ -963,27 +1014,40 @@
                 "tags": [
                     "Reviews"
                 ],
-                "summary": "Create a new review",
+                "summary": "Vote for a review",
                 "parameters": [
                     {
-                        "description": "Review JSON",
-                        "name": "review",
+                        "type": "integer",
+                        "description": "Review ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Vote type (upvote or downvote)",
+                        "name": "vote",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/data.ReviewInput"
+                            "type": "integer"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/data.ReviewInput"
+                            "$ref": "#/definitions/main.envelope"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
@@ -1534,6 +1598,10 @@
                     "type": "string"
                 }
             }
+        },
+        "main.envelope": {
+            "type": "object",
+            "additionalProperties": {}
         }
     },
     "securityDefinitions": {
